<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Send Email Robust</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="txtFromHint">From</string>
    <string name="txtToHint">To (comma separated, no spaces)</string>
    <string name="txtSubjectHint">Subject</string>
    <string name="btnSend">Send</string>
    
    <string name="errorFromMissing">"From field missing"</string>
    <string name="errorFromNotEmail">From field is not an email address</string>
    <string name="errorToMissing">To field missing</string>
    <string name="errorToNotEmail">All To fields are not valid email address</string>
    
    <string name="sentEmail">Email sent successfully!</string>
    <string name="sentEmailFailed">Oh no, unable to send email. Try again later.</string>

</resources>
