<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codingchallenge.sendemailrobust.MainActivity" >

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
    />
    <EditText 
        android:id="@+id/txtFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_below="@id/lblTitle"
        android:hint="@string/txtFromHint"
        android:singleLine="true"
        android:inputType="textEmailAddress"
   	/>
    <LinearLayout
        android:id="@+id/layTo"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@id/txtFrom"
    	android:orientation="horizontal">
        <EditText 
	        android:id="@+id/txtTo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:hint="@string/txtToHint"
	        android:inputType="textEmailAddress"
	        android:layout_weight="1"
   		/>
        <Button 
	        android:id="@+id/btnSelectContact"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="+"
	        android:layout_weight="0"
        />
    </LinearLayout>
    <EditText 
        android:id="@+id/txtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layTo"
        android:hint="@string/txtSubjectHint"
        android:inputType="textEmailSubject"
        android:singleLine="true"
   	/>
    <EditText 
        android:id="@+id/txtBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSubject"
        android:gravity="top"
        android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
        android:minLines="5"
   	/>
    <Button 
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBody"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:text="@string/btnSend"
        />

</RelativeLayout>
